Updates from code inspection (#156)